mas modificaciones tercer desafio

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node ./src/app.js",
+    "dev": "nodemon -e 'js' ./src/app.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+  "express": "^4.18.2"
   }
 }
